unpackaged/main/default/objects/Privacy_Notice__c/Privacy_Notice__c.object-meta.xml
<CustomObject>
    <label>Privacy Notice</label>
    <nameField>
        <displayFormat>PN{0}</displayFormat>
        <label>Privacy Notice No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Notices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>