unpackaged/main/default/objects/Privacy_Notice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compañía</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>contains</operation>
            <value>COMPAÑÍA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Privacy Notices</relationshipLabel>
    <relationshipName>Privacy_Notices</relationshipName>
    <type>Lookup</type>
</CustomField>