unpackaged/main/default/objects/Privacy_Notice__c/fields/Notice_Text__c.field-meta.xml
<CustomField>
    <fullName>Notice_Text__c</fullName>
    <label>Notice Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>