unpackaged/main/default/objects/Privacy_Notice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <columns>Account__c</columns>
    <columns>Notice_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Aviso de Inicio</value>
    </filters>
    <label>All</label>
</ListView>